@@ -2,6 +2,10 @@
 #+link:    compat-gh   https://github.com/emacs-compat/compat/issues/
 #+options: toc:nil num:nil author:nil
 
+* Development
+
+- compat-29: Add function =char-uppercase-p=.
+
 * Release of "Compat" Version 29.1.4.2
 
 - compat-28: Improve =make-separator-line= visuals on graphic displays.
